<resources>
    <string name="app_name">StickPoint Music</string>
    <string name="search_hint">Search</string>
    <string name="index">Home</string>
    <string name="download">Download and Local</string>
    <string name="like">Like</string>
    <string name="search">search</string>
    <string name="default_music_name">No songs are currently playing</string>
    <string name="default_music_time">--:--/--:--</string>
    <string name="play">Play</string>
    <string name="picture">Pic</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="no_music_to_play">No music is currently playing</string>
    <string name="musicName">Music Name</string>
    <string name="singer">Singer</string>
    <string name="album">Album</string>
    <string name="down">Down</string>
    <string name="no_picture">No picture at present</string>
    <string name="more">More</string>
    <string name="netease">Netease</string>
    <string name="tencent">QQ Music</string>
    <string name="kugou">Kugou Music</string>
    <string name="favoriate">My Favoriate</string>
    <string name="download_this_music">Download this music</string>
    <string name="add_like">Add to like</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="network_wrong">Unable to connect to the server, please check your network Settings</string>
    <string name="to">-</string>
    <string name="introduce">Welcome to use vertex music, full web music download for free, start now -> github</string>
    <string name="copy_introduce">The song information has been copied to the clipboard</string>
    <string name="cancel">Cancel</string>
    <string name="no_search_input">Please type in the search box</string>
    <string name="zero_time">00:00</string>
    <string name="downloading">Downloading...</string>
    <string name="download_success">Download successful songs saved in</string>
    <string name="download_failed">Download failed</string>
    <string name="zero_size">0.0M/0.0M</string>
    <string name="hsitory">Recent play</string>
    <string name="rank">Rank</string>
    <string name="fav_success">Successfully add to my favorites</string>
    <string name="fav_failed">Add to my liking failure</string>
    <string name="fav_del_success">Remove my favorite success</string>
    <string name="fav_del_failed">To remove my like failure</string>
    <string name="no_fav">You don\'t have any music you like</string>
    <string name="about_us">About Us</string>
    <string name="remove_like">Remove from liking</string>
    <string name="remove_all">Remove All</string>
    <string name="back">Back</string>
    <string name="download_not_open">This feature is not available, but it does not affect the Download function, the Download directory is /sdcard/StickPointDownload/ folder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="permissions_hint">Open read and write permissions, can use this software.</string>
    <string name="play_fail">Play Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_cancel">Download cancel</string>
    <string name="migu">MiGu Music</string>
    <string name="check_update">Check Update</string>
    <string name="playlist_recommended">Playlist Recommended</string>
    <string name="no_lyric">No lyrics</string>
    <string name="kuwo">KooWo Music</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
