<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:background="@color/foreground">

        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/search_radius"
            android:ems="10"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingLeft="40dp"
            android:paddingRight="18dp"
            android:textColor="@color/textBlack"
            android:textColorHint="@color/textHint"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/search"
            app:layout_constraintStart_toStartOf="@+id/search"
            app:layout_constraintTop_toTopOf="@+id/search"
            app:srcCompat="@mipmap/search" />

        <TextView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/search_button_radius"
            android:gravity="center"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/search"
            android:textColor="@color/textWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainWrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.viewpager.widget.ViewPager>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainPlayer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:background="@color/foreground">

        <ImageView
            android:id="@+id/musicPic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/default_pic" />

        <TextView
            android:id="@+id/current_music_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:text="@string/default_music_name"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/normal"
            app:layout_constraintStart_toEndOf="@+id/musicPic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_music_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_music_time"
            android:textColor="@color/textHint"
            android:textSize="@dimen/small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/current_music_name"
            app:layout_constraintTop_toBottomOf="@+id/current_music_name" />

        <ImageView
            android:id="@+id/min_music_control"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:background="@color/foreground"
        android:checkedButton="@id/nav_index"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/nav_index"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/nav_bar_btn_index_check"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="5dp"
            android:text="@string/index"
            android:textColor="@color/nav_bar_btn_text_check"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/nav_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/nav_bar_btn_like_check"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/like"
            android:textColor="@color/nav_bar_btn_text_check"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/nav_download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/nav_bar_btn_download_check"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/download"
            android:textColor="@color/nav_bar_btn_text_check"
            android:textSize="12sp" />
    </RadioGroup>

</LinearLayout>