<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/download_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tip_box_radius"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MusicUtils.MusicDownloadDialog">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/download_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fang_zheng_shu_song"
        android:text="@string/downloading"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/normal" />

    <TextView
        android:id="@+id/download_musicName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fang_zheng_shu_song"
        android:text="@string/musicName"
        android:textColor="@color/textHint"
        android:textSize="@dimen/small" />

    <ProgressBar
        android:id="@+id/download_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:progressDrawable="@drawable/player_page_seek_bar" />

    <TextView
        android:id="@+id/download_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fang_zheng_shu_song"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/zero_size"
        android:textColor="@color/textHint"
        android:textSize="@dimen/small" />

</LinearLayout>