<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/download_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tipBg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/download_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/tip_box_radius"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/download_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloading"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/normal" />

        <TextView
            android:id="@+id/download_musicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musicName"
            android:textColor="@color/textHint"
            android:textSize="@dimen/small" />

        <ProgressBar
            android:id="@+id/download_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:progressDrawable="@drawable/player_page_seek_bar" />

        <TextView
            android:id="@+id/download_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/zero_size"
            android:textColor="@color/textHint"
            android:textSize="@dimen/small" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>